plugins {
    alias(libs.plugins.kotlin.jvm)
    id("org.graalvm.buildtools.native") version "0.11.1"
    id 'com.google.osdetector' version '1.7.3'
    id 'application'
}

group = 'org.example'
description = 'LWJGL3 HelloWorld with native image by GraalVM'
version = '0.0.1-SNAPSHOT'

def getCurrentPlatform() {
    def os = osdetector.os
    def lwjglOS = os == 'linux' ? 'linux' :
                  os == 'osx' ? 'macos' :
                  os == 'windows' ? 'windows' :
                  'unknown'
    if (lwjglOS == 'unknown')
        throw new GradleException('Unsupported OS: ' + os)

    def arch = osdetector.arch
    //consider 64-bit architectures only
    def lwjglArch = arch == 'x86_64' ? '' :
                    arch == 'aarch_64' ? 'arm64' :
                    'unknown'
    if (lwjglArch == 'unknown')
        throw new GradleException('Unsupported Architecture: ' + arch)

    return (lwjglArch == '' ? lwjglOS : (lwjglOS + '-' + lwjglArch))
}

ext {
    lwjglVersion = "3.3.6"
    lwjglModules = ['lwjgl', 'lwjgl-assimp', 'lwjgl-glfw', 'lwjgl-openal', 'lwjgl-opengl', 'lwjgl-stb']
    mainClassName = 'org.example.AppKt'
    currentPlatform = getCurrentPlatform()
}


repositories {
    mavenCentral()
    maven { url "https://central.sonatype.com/repository/maven-snapshots" }
    mavenLocal()
}


dependencies {
    //get recommended dependency versions from the LWJGL BOM
    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")

    //add LWJGL modules and the current OS's natives to the compile and runtime classpaths
    lwjglModules.each {
        implementation "org.lwjgl:$it"
        if (it != 'lwjgl-egl')  //lwjgl-egl has no native libraries
            runtimeOnly "org.lwjgl:$it::natives-$currentPlatform"
    }
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
        vendor.set(JvmVendorSpec.matching("GraalVM"))
    }
}

compileJava {
    options.release = 24      
    options.encoding = 'UTF-8'
}

application {
    mainClass = project.mainClassName
    applicationName = project.name
}

run {
    systemProperties = System.getProperties()
}

tasks.register("prepareNatives", Copy) {

    from({
        configurations.runtimeClasspath.findAll {
            it.name.contains("natives-${currentPlatform}")
        }.collect { zipTree(it) }
    })

    include "**/*.so", "**/*.dll", "**/*.dylib"

    into "$projectDir/src/main/resources/natives"

    eachFile {
        path = name   // flatten folder structure
    }

    includeEmptyDirs = false
}

tasks.named("processResources") {
    dependsOn("prepareNatives")
}

graalvmNative {
    binaries {
        main {
            runtimeArgs.add("--enable-native-access=ALL-UNNAMED")
        }
    }
}


tasks.named('test') {
    useJUnitPlatform()
}
